--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "socket.io": "^1.7.3"
   },
     "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
   "devDependencies": {
