--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "casadocodigo",
+  "name": "4patas",
   "version": "1.0.0",
-  "description": "site da casa do codigo",
+  "description": "site para resgates de animais",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "alberto",
+  "author": "Joao Siqueira",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
